# Agbenchmark

./: README.md
clarify-task/: pyproject.toml  requirements.txt
clarify-task/data/: taskA_batch_5711c2cc.json
clarify-task/prompts/: zero_shot.py
